# crashlens_detector

./: .gitignore  BRANCH_PROTECTION_IMPLEMENTATION.md  DETECTOR_PRIORITY_LOGIC.md  FALLBACK_STORM_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LAZY_EVALUATION.md  OVERKILL_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  budget.yml  cli-robustness-improvements.md  cli-test-checklist-completed.md  cli-test-log.md  commands-report.md  create_test_data.py  debug_costs.py  debug_parser.py  debug_retry.py  debug_toggle.py  detectors.md  example_reports.md  final_compliance_test.py  friend_conversation_simulation.md  log-format-requirements.md  paste-mode-implementation.md  pyproject.toml  report.md  setup.cfg  summary-features-implementation.md  test_checklist_compliance.py  test_enhanced_features.py  test_fallback_storm_checklist.py  test_model_consistency.py  test_overkill_checklist.py  test_paste_mode.py  test_priority_suppression.py  test_production_integration.py  test_semantic_retry.py  test_updated_fallback.py
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
crashlens/: __init__.py  __main__.py  cli.py  cli_new.py
detailed_output/: demo_fallback_01.json  demo_fallback_02.json  demo_fallback_03.json  demo_fallback_04.json  demo_fallback_05.json  demo_overkill_01.json  demo_overkill_02.json  demo_retry_01.json  fallback_failure.json  fallback_storm.json  fallback_storm_traces.json  fallback_traces.json  overkill_model.json  overkill_traces.json  retry_loop.json  retry_traces.json
examples-logs/: demo-logs.jsonl  (+3 more)
(+37 files in other folders)
